WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
186092
Block more ports (427, 548, 6697)
https://bugs.webkit.org/show_bug.cgi?id=186092
Summary
Block more ports (427, 548, 6697)
Anne van Kesteren
Reported
2018-05-30 07:27:41 PDT
See
https://github.com/whatwg/fetch/pull/738
for the change to the Fetch Standard. Chrome already blocks 6697 and is planning on blocking the other two as well. So I suspect you can ship 6697 directly, but might want to consider coordinating the others.
https://github.com/web-platform-tests/wpt/pull/11249
updates the tests.
Attachments
Patch
(22.31 KB, patch)
2018-11-23 11:27 PST
,
Rob Buis
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from ews126 for ios-simulator-wk2
(2.61 MB, application/zip)
2018-11-24 01:45 PST
,
EWS Watchlist
no flags
Details
Patch
(22.31 KB, patch)
2018-11-25 11:47 PST
,
Rob Buis
no flags
Details
Formatted Diff
Diff
Patch
(22.47 KB, patch)
2018-11-26 10:54 PST
,
Rob Buis
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2018-05-30 20:10:57 PDT
<
rdar://problem/40673291
>
Rob Buis
Comment 2
2018-11-23 11:27:07 PST
Created
attachment 355528
[details]
Patch
EWS Watchlist
Comment 3
2018-11-23 11:29:22 PST
Attachment 355528
[details]
did not pass style-queue: ERROR: Source/WebCore/platform/URL.cpp:922: One space before end of line comments [whitespace/comments] [5] Total errors found: 1 in 5 files If any of these errors are false positives, please file a bug against check-webkit-style.
EWS Watchlist
Comment 4
2018-11-24 01:45:00 PST
Comment on
attachment 355528
[details]
Patch
Attachment 355528
[details]
did not pass ios-sim-ews (ios-simulator-wk2): Output:
https://webkit-queues.webkit.org/results/10126662
New failing tests: media/no-fullscreen-when-hidden.html
EWS Watchlist
Comment 5
2018-11-24 01:45:01 PST
Created
attachment 355559
[details]
Archive of layout-test-results from ews126 for ios-simulator-wk2 The attached test failures were seen while running run-webkit-tests on the ios-sim-ews. Bot: ews126 Port: ios-simulator-wk2 Platform: Mac OS X 10.13.6
Rob Buis
Comment 6
2018-11-25 11:47:31 PST
Created
attachment 355600
[details]
Patch
EWS Watchlist
Comment 7
2018-11-25 11:49:52 PST
Attachment 355600
[details]
did not pass style-queue: ERROR: Source/WebCore/platform/URL.cpp:922: One space before end of line comments [whitespace/comments] [5] Total errors found: 1 in 5 files If any of these errors are false positives, please file a bug against check-webkit-style.
Rob Buis
Comment 8
2018-11-25 13:34:01 PST
Comment on
attachment 355600
[details]
Patch The style error is a bit silly and I think we can ignore it.
Frédéric Wang Nélar
Comment 9
2018-11-26 01:23:36 PST
Comment on
attachment 355600
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=355600&action=review
> Source/WebCore/ChangeLog:8 > + Block port 427.
Maybe explain a bit more. In particular that 548 and 6697 are already blocked, we just extend WPT coverage to verify these ports too.
> LayoutTests/imported/w3c/ChangeLog:8 > + Update equest-bad-port.html to latest version.
request-bad-port.html
Rob Buis
Comment 10
2018-11-26 10:54:47 PST
Created
attachment 355655
[details]
Patch
EWS Watchlist
Comment 11
2018-11-26 10:56:01 PST
Attachment 355655
[details]
did not pass style-queue: ERROR: Source/WebCore/platform/URL.cpp:922: One space before end of line comments [whitespace/comments] [5] Total errors found: 1 in 5 files If any of these errors are false positives, please file a bug against check-webkit-style.
Rob Buis
Comment 12
2018-11-28 00:29:06 PST
Landed as
r238604
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug