Block more ports (427, 548, 6697) https://bugs.webkit.org/show_bug.cgi?id=186092

Reviewed by Frédéric Wang.

Update request-bad-port.html to latest version.

* web-platform-tests/fetch/api/request/request-bad-port-expected.txt:
* web-platform-tests/fetch/api/request/request-bad-port.html:

Canonical link: https://commits.webkit.org/206758@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@238604 268f45cc-cd09-0410-ab3c-d52691b4dbfc